fix minor spacing issue for partners grid

--- a/html-css-bootcamp/SwipeMegaProject/index.css
+++ b/html-css-bootcamp/SwipeMegaProject/index.css
@@ -812,6 +812,15 @@ main {
   .hero .col-right {
     width: 40%;
   }
+
+  /* PARTNERS GRID */
+  .partners-section {
+    margin: -60px 0 0 0;
+  }
+
+  .partners-grid {
+    margin: 0 0 var(--spacing-xl) 0;
+  }
 }
 
 /* CUSTOM BREAKPOINT */
@@ -906,6 +915,11 @@ main {
   .hero-phone {
     height: 450px;
     transform: translateX(32px);
+  }
+
+  /* PARTNERS GRID */
+  .partners-section {
+    margin: -20px 0 0 0;
   }
 
   /* UNIIFED PLATFORM SECTION */
@@ -1003,6 +1017,10 @@ main {
   }
 
   /* PARTNERS SECTION */
+  .partners-section {
+    margin: var(--spacing-xl) 0 var(--spacing-sm) 0;
+  }
+
   .partners-grid {
     grid-template-columns: 1fr 1fr;
   }
